# transit-planner3

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.web  Dockerfile.web-backend  README.md  docker-compose.yml  next.config.js  package-lock.json  package.json  requirements.txt  vercel.json
.claude/: settings.json
.github/workflows/: build.yml  deploy.yml
files-to-copy/: TransitMap.tsx
pages/: sentry-example-page.jsx
python_server/: plan.md  pyproject.toml  run.sh
python_server/api/: anthropic.py  backboard.py  council.py  data_tools.py  main.py  ridership.py
python_utils/: .env.example  alembic.ini  export_canada_pop_geojson.py  pyproject.toml
python_utils/alembic/: env.py
python_utils/alembic/versions/: 202611070001_initial_postgis_schema.py
python_utils/parsing-scripts/: csv-column-filter.py  population-csv-sort.py  shapefile-to-geojson.py
python_utils/python_utils/: __init__.py  supabase_helper.py
python_utils/python_utils/db/: __init__.py  base.py  session.py
python_utils/python_utils/db/migrations/: README.md
python_utils/python_utils/db/models/: __init__.py  agency.py  demand_summary.py  network_edge.py  route.py  scenario.py  service_pattern.py  service_summary.py  stop.py  time_bucket.py
web/: .env.example  CLAUDE.md  QUICKSTART.md  README.md  next.config.js  package-lock.json  package.json  test_ai.sh
web/docs/: transit-desert-algorithm.md
web/scripts/: setup.cjs  setup.js
web/src/: env.js  middleware.ts
web/src/app/: layout.tsx
web/src/lib/: analytics.ts  auth0.ts  docs-content.ts  gtfs.ts  road-snap.ts
(+63 files in other folders)
